# haskell-xss-sanitize

./: .gitignore  ChangeLog.md  README  README.md  SanitizeXSS.hs  TODO  flake.nix  package.yaml  test.hs  xss-sanitize.cabal
.github/workflows/: tests.yml
Text/HTML/: SanitizeXSS.hs
Text/HTML/SanitizeXSS/: Css.hs
src/Text/HTML/: SanitizeXSS.hs
src/Text/HTML/SanitizeXSS/: Css.hs
test/: main.hs
