name:            xss-sanitize
version:         0.3.0.1
license:         BSD3
license-file:    LICENSE
author:          Greg Weber <greg@gregweber.info>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        sanitize untrusted HTML to prevent XSS attacks
description:     run untrusted HTML through Text.HTML.SanitizeXSS.sanitizeXSS to prevent XSS attacks. see README.md <http://github.com/gregwebs/haskell-xss-sanitize> for more details

category:        Web
stability:       Stable
cabal-version:   >= 1.8 
build-type:      Simple
homepage:        http://github.com/gregwebs/haskell-xss-sanitize

library
    build-depends:  base == 4.*, containers
                    , tagsoup >= 0.12.2
                    , utf8-string >= 0.3
                    , network >= 2
                    , css-text >= 0.1 && < 0.2
                    , text                      >= 0.11     && < 0.12
                    , attoparsec                >= 0.10     && < 0.11


    exposed-modules: Text.HTML.SanitizeXSS
    other-modules:   Text.HTML.SanitizeXSS.Css
    ghc-options:     -Wall

test-suite test
    type: exitcode-stdio-1.0
    main-is: test/main.hs
    cpp-options: -DTEST
    build-depends:   base  >= 4        && < 5, containers
                    , tagsoup >= 0.12.2
                    , utf8-string >= 0.3
                    , network >= 2
                    , css-text >= 0.1 && < 0.2
                    , text                      >= 0.11     && < 0.12
                    , attoparsec           >= 0.10     && < 0.11
                    , hspec
                    , HUnit >= 1.2


source-repository head
  type:     git 
  location: http://github.com/gregwebs/haskell-xss-sanitize.git
